<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AIClick">

    <LinearLayout
        android:id="@+id/layoutai"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#FFEB3B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createai" />

        <TextView
            android:id="@+id/startai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onstart" />

        <TextView
            android:id="@+id/stopai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onstop" />

        <TextView
            android:id="@+id/destroyai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ondestroy" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>